--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -26,10 +26,13 @@
   font-weight: 800;
   color: #1775ee;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .loginDesc {
   font-size: 24px;
+  font-style: italic;
+  text-align: center;
 }
 
 .loginBox {
